# MISA

./: .gitignore  Cargo.toml  Makefile  README.md  stack.yaml
block/: arithmetic.dig  comparator.dig  regfile.dig
cli/: helpers.py  misa-ar.py  misa-as.py  misa-ld.py  misa-nm.py  misa-objdump.py  misa-pr.py
docs/arch/: .gitignore  _quarto.yml  hardware.qmd  index.qmd  isa.qmd  toolchain.qmd
docs/block/: MISA-Block-Diagram.drawio  control.dig  csrfile.dig  decoder.dig  (+2 more)
misa-ar/: misa-ar.cabal  package.yaml
misa-as/: CHANGELOG.md  Cargo.toml  README.md  misa-as.cabal  package.yaml
misa-hw/: control.dig  csrfile.dig  decoder.dig  misa8_3cpi_37pin_package.dig
misa-ld/: CHANGELOG.md  Cargo.toml  README.md  misa-ld.cabal  package.yaml
misa-nm/: CHANGELOG.md  README.md  misa-nm.cabal  package.yaml
misa-objdump/: misa-objdump.cabal  package.yaml
misa-os/: memmap.ld
misa-pr/: misa-pr.cabal  package.yaml
misa-sim/: CMakeLists.txt  Cargo.toml  control.dig  memory.dig  misa-sim.py  misa.dig  misa8_3cpi.dig  misa8_3cpi_37pin.dig  misa8_3cpi_package.dig  regfile.dig  simulator.py
misa-sim/include/: arithmetic.h  comparator.h  csrfile.h  grammar.h  logger.h  memory.h  mux.h  processor.h  regfile.h
misa-sim/src/: arithmetic.cpp  comparator.cpp  csrfile.c  csrfile.cpp  logger.c  main.c  main.cpp  memory.c  memory.cpp  processor.c  regfile.c  regfile.cpp
programs/: arithmetic.S  arraysum.S  blank.S  branch.S  branch2.S  default.ld  fib.S  flat.ld  halt.S  immediate.S  inequality.S  loop.S  macros.S  macros2.S  macros3.S  memory.S  reset.S  special.S  start.S
(+37 files in other folders)
